--- a/app/css/main.css
+++ b/app/css/main.css
@@ -66,6 +66,11 @@ a, a:hover {
 
 /*Это Header!!!*/
 
+#wrapper{
+    margin: 0 auto;
+    min-width: 1000px;
+}
+
 .container{
 	width: 940px;
 	margin: 0 auto;
@@ -77,8 +82,9 @@ a, a:hover {
 	padding: 20px 0;
 	left: 0;
 	right: 0;
-	width: 100%;
-	}
+    margin: 0 auto;
+/*	width: 100%;*/
+}
 
 .logo{
 	float: left;
